<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPage"
    android:orientation="vertical">

    <com.lingmiao.distribution.view.LayoutTopView
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/xml_card_view_fill_white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/personal_info_head_img"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/pi_head_img"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/personal_info_head_img"
                android:src="@mipmap/icon_personal" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_nick"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pi_nick"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="@string/personal_info_nick_hint"
                android:text=""
                android:textColor="@color/color757"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/personal_info_phone"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pi_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="end|center_vertical"
                android:text=""
                android:textColor="@color/color757"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_name"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pi_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="end|center_vertical"
                android:text=""
                android:textColor="@color/color757"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_id_card"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pi_card_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:enabled="false"
                android:gravity="end|center_vertical"
                android:text=""
                android:textColor="@color/color757"
                android:textSize="14sp" />
            pi_card_code
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/personal_info_card_img"
                android:textColor="@color/color000"
                android:textSize="14sp" />


            <ImageView
                android:id="@+id/pi_card_back_img"
                android:layout_width="95dp"
                android:layout_height="55dp"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/personal_info_head_img"
                android:scaleType="fitXY"
                android:src="@mipmap/zhengjian" />

            <ImageView
                android:id="@+id/pi_card_front_img"
                android:layout_width="95dp"
                android:layout_height="55dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/pi_card_back_img"
                android:contentDescription="@string/personal_info_head_img"
                android:scaleType="fitXY"
                android:src="@mipmap/dianzizhengjian" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="配送区域"
                android:textColor="@color/color000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_are"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="end|center_vertical"
                android:hint="请选择"
                android:drawablePadding="@dimen/dimen_15"
                android:textColor="@color/color757"
                android:drawableRight="@mipmap/arrow_right"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>